--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.23.3",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.1",
     "ethers": "^5.7.1",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
