--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-css-theme-switcher": "^0.3.0",
     "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.18.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
-    "swr": "^1.3.0",
-    "typescript": "^4.8.4",
     "web-vitals": "^2.1.4",
     "web3": "^1.8.0"
   },
